front-end/src/dashboard/Dashboard.css
/* FONTS */

@font-face {
  font-family: "Poppins Regular";
  src: url("../fonts/Poppins-Regular.ttf");
}

@font-face {
  font-family: "Poppins ExtraLight";
  src: url(../fonts/Poppins-ExtraLight.ttf);
}

@font-face {
  font-family: "Poppins Light";
  src: url("../fonts/Poppins-Light.ttf");
}

* {
  font-family: "Poppins Regular";
}

.animated-text {
  background-image: -webkit-linear-gradient(
    DarkSalmon 50%,
    rgb(255, 193, 112) 50%
  );
  background-size: 100% 50px;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-animation: stripes 2s linear infinite;
  animation: stripes 2s linear infinite;
  font-size: 3rem;
  display: flex;
  justify-content: center;
  margin: 1rem;
  padding-top: 10rem;
}

@-webkit-keyframes stripes {
  100% {
    background-position: 0 -50px;
  }
}

@keyframes stripes {
  100% {
    background-position: 0 -50px;
  }
}

.colorfulBtnTwo {
  background-color: rgb(143, 143, 143);
  border-radius: 5px;
  border: 1px solid black;
  opacity: 8;
  transition: 0.3s;
  padding: 10px;
  margin: 0rem 0rem 0rem 0rem;
  font-weight: bold;
}

.reservations-list {
  padding: 2%;
}

.home__data {
  grid-column: 1/2;
}

@-webkit-keyframes pulse  
{
50% {background-color: rgb(255, 193, 112);} 
100% {background-color: darksalmon;}
}

.home__title {
  font-size: 2rem;
  margin-bottom: var(--mb-0-25);
  /* color: rgb(143, 143, 143); */
  color: rgb(255, 193, 112);
}

.home__titleTwo {
  display: none;
}

.restaurant-pictureTwo {
  display: none;
}

.descriptionTwo {
  display: none;
}

h4 {
  color: rgb(110, 110, 110);
}

.today__button {
  background-color: rgb(143, 143, 143);
  color: white;
}

.today__button:hover {
  background-color: rgb(255, 193, 112);
  color: white;
}

.description {
  font-family: "Poppins Light";
  font-size: .9rem;
  color: rgb(143, 143, 143);
  font-weight:400;
  margin-top: 1rem;
  margin-bottom: 10rem;
  font-weight: 300;
  /* display: flex;
  justify-content: center;
  margin: 2% 25% 10% 25%; */
}

.restaurant-picture {
  height: auto;
  width: auto; 
  /* border-radius: 25%; */
  float: left;
  animation: profile__animate 8s ease-in-out infinite 1s;
  width: 400px;
  height: 267px;
  margin: 0rem 5rem 5rem 5rem;
}

@keyframes profile__animate {
  0% {
      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
  }
  50% {
      border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
  }
  100% {
      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
  }
}

.home__container {
  row-gap: 1rem;
  display: grid;
}

.home__content {
 grid-template-columns: 116px repeat(2, 1fr); 
 grid-column: 1/3; 
 grid-auto-rows: minmax(100px, auto); 
display: grid;
grid-template-columns: repeat(2, 1fr);
padding-top: 3.5rem;
column-gap: 2rem;
align-items: center;
}

.message-window {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  /* position: relative; */
}

#no-reservations {
  margin: 1rem 2rem 1rem 2rem;
  color: rgba(255, 38, 0, 0.5);
  display: flex;
  justify-content: center;
}

.reservations-list {
  margin-top: 2rem;
}



@media screen and (max-width: 992px) {

  .restaurant-picture {
    /* height: auto;
    width: auto;  */
    /* border-radius: 25%; */
    float: left;
    animation: profile__animate 8s ease-in-out infinite 1s;
    width: 350px;
    height: 233px;
    margin: 0rem 5rem 5rem 5rem;
  }
  .description {
    font-size: 1rem;
    color: rgb(143, 143, 143);
    font-weight:400;
    margin-top: 1rem;
    margin-bottom: 10rem;
    font-weight: 300;
    /* display: flex;
    justify-content: center;
    margin: 2% 25% 10% 25%; */
  }

  .home__title {
    font-size: 1.5rem;
    margin-bottom: var(--mb-0-25);
    /* color: rgb(143, 143, 143); */
    color: rgb(255, 193, 112);
    margin-right: 2rem;
  }
  .home__content {
    grid-template-columns: 116px repeat(2, 1fr); 
    grid-column: 1/3; 
    grid-auto-rows: minmax(100px, auto); 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   padding-top: 3.5rem;
   column-gap: 3rem;
   align-items: center;
   }
}

@media screen and (max-width: 768px) {

  .home__container {
    row-gap: 1rem;
    display: block;
  }

  .animated-text-2 {
    background-image: -webkit-linear-gradient(
    DarkSalmon 50%,
    rgb(255, 193, 112) 50%
  );
  background-size: 100% 50px;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
  -webkit-animation: stripes 2s linear infinite;
  animation: stripes 2s linear infinite;
  font-size: 3rem;
  display: flex;
  justify-content: center;
  margin: 1rem;
  padding-top: 2rem;

  }

  .home__title {
    display: none;
  }

  .home__titleTwo {
    margin-top: 2rem;
    font-size: 2rem;
  margin-bottom: var(--mb-0-25);
  /* color: rgb(143, 143, 143); */
  color: rgb(255, 193, 112);
  display: block;
  }

  .restaurant-pictureTwo {
    height: auto;
  width: auto; 
  /* border-radius: 25%; */
  float: none;
  animation: profile__animate 8s ease-in-out infinite 1s;
  width: 300px;
  height: 200px;
  margin: 0rem 5rem 5rem 5rem;
  display: block;
  }

  .descriptionTwo {
    display: block;
    font-family: "Poppins Light";
  font-size: .9rem;
  color: rgb(143, 143, 143);
  font-weight:400;
  margin-top: 1rem;
  margin-bottom: 10rem;
  margin-right: var(--mb-1-5);
  font-weight: 300;
  }

   .restaurant-picture {
    display: none;
  }

  .description {
    font-family: "Poppins Light";
    font-size: 1rem;
    color: rgb(143, 143, 143);
    font-weight:400;
    margin-top: 1rem;
    margin-bottom: 0rem;
    font-weight: 300;
    /* display: flex;
    justify-content: center;
    margin: 2% 25% 10% 25%; */
  }
}

@media screen and (max-width: 576px) {
  .restaurant-pictureTwo {
    height: auto;
  width: auto; 
  /* border-radius: 25%; */
  float: none;
  animation: profile__animate 8s ease-in-out infinite 1s;
  width: 333px;
  height: 222px;
  margin: 0rem 0rem 0rem 0rem;
  display: block;
  }

  .animated-text {
    margin: 0rem;
    padding-top: 9rem;
    font-size: 2.5rem;

  }

  .descriptionTwo {
  display: block;
  font-family: "Poppins Light";
  font-size: .9rem;
  color: rgb(143, 143, 143);
  font-weight:400;
  margin-top: 1rem;
  margin-bottom: 4rem;
  font-weight: 300;
  }

  .home__content {
     grid-template-columns: 116px repeat(2, 1fr); 
    grid-column: 1/3; 
    grid-auto-rows: minmax(100px, auto);  
    display: grid; 
    grid-template-columns: repeat(2, 1fr); 
   padding-top: 2.5rem;
   column-gap: 2rem;
   align-items: center;
   padding-bottom: 2.7rem;
   }

   .home__titleTwo {
    margin-top: 0rem;
    font-size: 2rem;
    margin-bottom: var(--mb-0-25);
    /* color: rgb(143, 143, 143); */
    color: rgb(255, 193, 112);
    display: block;
  }

}

@media screen and (max-width: 350px) {
  /* .restaurant-picture {
    height: 40%;
    width: 40%;
    border-radius: 5%;
    background-size: cover;
  }

  .description {
    font-family: "Poppins Light";
    font-size: 17px;
    display: flex;
    justify-content: center;
    margin: 5% 25%;
  } */
}

